@@ -1,4 +1,5 @@
 4.5 -> 5.0:
+    - jbj: --newmagic enabler to add new signature/metadata magic to headers.
     - jbj: nobrainer --nolead & --nosigh disablers.
     - jbj: get rid of convertdb1.
     - jbj: HEADER_MAGIC_YES always: remove the enum and arguments everywhere.
